--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,14 +7,19 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["pizza", "frontend", "ejs", "microservices"],
+  "keywords": [
+    "pizza",
+    "frontend",
+    "ejs",
+    "microservices"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.13.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
-    "axios": "^1.6.0",
-    "cookie-parser": "^1.4.6"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
