--- a/order-service/package.json
+++ b/order-service/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "pizza-frontend",
+  "name": "order-service",
   "version": "1.0.0",
-  "description": "Frontend for Pizza Microservices",
+  "description": "Order Management Microservice - Handle pizza orders",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [
+    "microservices",
     "pizza",
-    "frontend",
-    "ejs",
-    "microservices"
+    "orders",
+    "REST",
+    "API"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.13.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^17.2.3",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
