--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,7 +20,9 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
