feat: Admin UI improvements, orange theme, and file upload support
UI Theme Changes:
- Change color scheme from purple to orange/red (#ff6b35, #c92127)
- Update navbar, buttons, hero section, and admin pages
- Reduce hero overlay opacity for better background visibility

Currency & Localization:
- Change currency symbol from $ to ₪ (shekel) in admin and orders pages

Admin Features:
- Add delete order functionality for all orders
- Fix Invalid Date display issue

Backend Improvements:
- Increase payload limit to 10mb for image uploads (menu-service, api-gateway, webapp)
- Add deleteOrder controller and route in order-service
- Update Order model and order routes

--- a/k8s/order-service-deployment.yaml
+++ b/k8s/order-service-deployment.yaml
@@ -25,6 +25,8 @@ spec:
           value: "3003"
         - name: MONGODB_URI
           value: "mongodb+srv://pizzaAdmin:Pizza123!!@cluster0.iwlr4zb.mongodb.net/pizza-microservices?retryWrites=true&w=majority"
+        - name: MENU_SERVICE_URL
+          value: "http://menu-service:3002/api/menu"
         - name: NODE_ENV
           value: "production"
         livenessProbe:
